# rag-agent-pedagogies

./: .gitignore  Makefile  PROMPT.md  README.md  architecture.md
agent-tuteur-api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
agent-tuteur-api/corpus/: annale_bac_s1_2019_maths.md  francais_tl2_dissertation.md  maths_t1_statistiques.md  maths_ts1_derivees.md  pc_bfem_forces_poids.md
agent-tuteur-api/migrations/: env.py
agent-tuteur-api/migrations/versions/: 0001_initial_schema.py  0002_enable_rls.py  0003_add_document_log.py  0004_add_conversation_title.py  0005_add_users.py
agent-tuteur-api/scripts/: create_user.py  demo.py  seed_corpus.py
agent-tuteur-api/src/agent_tuteur/: __init__.py  factory.py  observability.py  textutil.py
agent-tuteur-api/src/agent_tuteur/agent/: course_plan.py  frustration.py  graph.py  guardrails.py  hint_strategy.py  intent.py  ports.py  prompt.py  state.py
agent-tuteur-api/src/agent_tuteur/api/: dependencies.py  main.py  rate_limit.py  schemas.py  security.py  streaming.py
agent-tuteur-api/src/agent_tuteur/config/: __init__.py  settings.py  taxonomy.py
agent-tuteur-api/src/agent_tuteur/domain/: __init__.py  models.py
agent-tuteur-api/tests/: conftest.py  test_agent_e2e.py  test_calculator.py  test_chunking.py  test_consistency.py  test_course_e2e.py  test_course_plan.py  test_embeddings.py  test_frustration.py  test_guardrails.py  test_hint_strategy.py  test_ingestion.py  test_intent.py  test_llm_fallback.py  test_normalize.py  test_observability.py  test_store_retriever.py
agent-tuteur-api/tests/api/: conftest.py  test_auth.py  test_chat.py  test_conversations.py  test_documents.py  test_health.py  test_search_progression_feedback.py
agent-tuteur-api/tests/persistence/: conftest.py  test_agent_with_postgres.py  test_postgres_smoke.py  test_repositories.py
agent-tuteur-api/tests/workers/: conftest.py  test_ingestion_worker.py
(+110 files in other folders)
