[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tuteur-api"
version = "0.1.0"
description = "Agent tuteur pédagogique RAG pour le programme scolaire sénégalais (cœur métier + API)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Agent Tuteur Sénégal" }]

# NB: le cœur métier (étapes 1-3) n'exige que le sous-ensemble « core » et reste
# exécutable hors-ligne (mock LLM + vectorstore in-memory). Les extras ajoutent
# les couches persistance / API / worker (étapes 4+).
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "sympy>=1.12",
  "httpx>=0.27",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "langgraph>=0.2",
]

[project.optional-dependencies]
# Backends « réels » activables par configuration (import tardif dans le code).
embeddings = ["FlagEmbedding>=1.2"]      # BGE-M3
vectorstore = ["qdrant-client>=1.9"]     # Qdrant serveur
persistence = [                            # étape 4 : PostgreSQL + Alembic
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
]
api = [                                    # étape 5 : FastAPI
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "slowapi>=0.1.9",
  "python-multipart>=0.0.9",
]
worker = [                                 # étape 6 : ingestion asynchrone (hors périmètre de cette session)
  "arq>=0.25",
  "redis>=5.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "aiosqlite>=0.20",   # tests repositories sans serveur Postgres
  "greenlet>=3.0",     # requis par SQLAlchemy async sous CPython
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]
